# kind-words-for-teachers-backend

./: .env  .gitignore  pyproject.toml  requirements.txt  school_praise.db
src/: app.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
src/handlers/: __init__.py  admin.py  auth.py  praise.py  teacher.py
